# gists

./: .actrc  .envrc  .gitignore  AGENTS.md  README.md  compose.yml  pyproject.toml
.github/workflows/: build-electron-app.yml  build.yml
generate-terrain-app/: .gitignore  README.md  flake.nix  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  tsconfig.json
generate-terrain-app/src/: terrain.ts
generate-terrain-frontend/: README.md  flake.nix  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
generate-terrain.py/: .gitignore  Dockerfile.build  Dockerfile.win64  README.md  compose.yml  generate-terrain.py  main.py  pyproject.toml  requirements.txt  terrain_023.stl
generate-terrain.py/.github/workflows/: build.yml
generate-terrain.py/generate_terrain_py/: cli.py  gui.py  utils.py
generate-terrain.py/output/: terrain.stl
generate-terrain.py/scripts/: build-standalone-binary.sh  build-windows-binary.sh  entrypoint.sh  run-pyinstaller.sh
